# Selene

./: CMakeLists.txt  README.md
include/: LuaAllocator.hpp  LuaLibraries.hpp  LuaStateManager.hpp
src/: LuaSTDArray.cpp  LuaStateManager.cpp
